[package]
name = "router-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
clap = { version = "4.4.14", features = ["derive"] }
futures-util = { version = "0.3.30", features = ["sink"] }
reqwest = { version = "0.11.23", default-features = false, features = ["json", "stream", "rustls-tls", "rustls-tls-webpki-roots"] }
tokio = { version = "1.35.1", features = ["net", "macros", "io-util", "io-std", "rt", "rt-multi-thread", "process"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
