[package]
name = "router-worker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.77"
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
js-sys = "0.3.67"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.57"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "0.3.67", features = ["Crypto", "CryptoKey", "SubtleCrypto", "HmacImportParams", "EcKeyImportParams", "EcdsaParams", "Window", "console"] }
worker = "0.0.24"
